--- a/Grades/Grades/es-419.lproj/Localizable.strings
+++ b/Grades/Grades/es-419.lproj/Localizable.strings
@@ -29,7 +29,14 @@
 "Enter a name for the subject" = "Ingresa un nombre para la materia";
 "Subject name" = "Nombre de la materia";
 
+"Qualifications must be greater than 0." = "Las calificaciones deben ser mayores a 0.";
+"Percentage must be greater than 0." = "El porcentaje debe ser mayor a 0.";
+"Maximum qualification must be greater than minimum qualification." = "La calificación máxima debe ser mayor a la calificación mínima.";
+"Qualification mush be between minimum qualification and maximum qualification" = "La calificación debe estar entre la calificación mímina y la calificación máxima.";
+"Percentage must be equal or less than 100." = "El porcentaje debe ser menor o igual a 100.";
+
 // General
 "Name" = "Nombre";
 "Cancel" = "Cancelar";
 "Save" = "Guardar";
+"Error" = "Error";
