Edit start and end date of term

--- a/Grades/Grades/en.lproj/Localizable.strings
+++ b/Grades/Grades/en.lproj/Localizable.strings
@@ -23,6 +23,10 @@
 "Enter max and min qualification to pass" = "Enter max and min qualification to pass";
 "Max. Qualification" = "Max. Qualification";
 "Min. Qualification" = "Min. Qualification";
+"Duration" = "Duration";
+"Enter the duration of the term" = "Enter the duration of the term";
+"From" = "From";
+"To" = "To";
 
 // Subjects
 "Add Subject" = "Add Subjct";
